--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
