--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "deploy": "cd ../ && git subtree push --prefix backend heroku-backend master || true"
   },
   "dependencies": {
     "cors": "^2.8.5",
