--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,9 @@
     "deploy": "cd ../ && git subtree push --prefix backend heroku-backend master || true"
   },
   "dependencies": {
+    "@types/node": "^16.11.4",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
+    "express": "^4.17.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   }
