--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,17 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-loading-overlay": "^1.0.0",
+    "@types/react-router-dom": "^5.3.1",
     "axios": "^0.23.0",
     "notistack": "^2.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1",
-    "@types/react-router-dom": "^5.3.1"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
